--- a/style.css
+++ b/style.css
@@ -15,99 +15,111 @@ body {
 
 p {
     font-size: 15px;
+    color: hsl(215, 51%, 70%);
+    text-align: left;
+}
+
+a {
+    text-decoration: none;
+    color: #FFFFFF
 }
 
 .card-bg {
-    height: 30rem;
+    position: absolute;
+    height: 32rem;
     width: 18rem;
+    top: 50%;
+    left: 50%;
+    margin: -16rem 0 0 -9rem;
     background-color: hsl(216, 50%, 16%);
     border-radius: 1rem;
 }
 
 .nft {
     position: relative;
-    left: 1rem;
-    top: 1rem;
     width: 16rem;
+    top: 1rem;
+    left: 1rem;
     border-radius: 1rem;
-}
-
-.icon-view {
-    position: relative;
-    top: 50%;
-    left: 50%;
-    margin: -24px 0 0 -24px;
 }
 
 .overlay {
     position: absolute;
-    left: 1rem;
-    top: 1rem;
-    height: 16rem;
     width: 16rem;
+    height: 16rem;
+    top: 1rem;
+    left: 1rem;
     border-radius: 1rem;
+    z-index: 1;
     opacity: 0;
-    transition: .5s ease;
     background-color: hsl(178, 100%, 50%);
+}
 
+.view {
+    display: none;
 }
 
 .overlay:hover {
+    cursor: pointer;
     opacity: .5;
-    background: hsl(178, 100%, 50%);
+    transition: .5s;
 }
 
-.nft-name {
-    font-size: 1.25rem;
-    font-weight: 700;
-    bottom: 10.5rem;
-    left: 1rem;
+.overlay:hover .view {
+    display: block;
+}
+
+
+.name {
+    margin-top: 1.5rem;
+    margin-left: 1rem;
+    margin-bottom: 1rem;
+}
+
+.name:hover a {
+    color: hsl(178, 100%, 50%);
 }
 
 .description {
-    bottom: 7rem;
-    left: 1rem;
+    margin-left: 1rem;
 }
 
-.icon-eth {
-    width: .6rem;
-    bottom: 5rem;
-    left: 1rem;
+.eth-value {
+    display: inline-flex;
+    margin-left: 1rem;
+    margin-top: 2rem;
 }
 
-.nft-value {
+.eth-value p {
     color: hsl(178, 100%, 50%);
-    font-size: .85rem;
     font-weight: 700;
-    left: 2rem;
-    bottom: 5rem;
 }
 
-.icon-clock {
-    width: 1rem;
-    bottom: 5rem;
-    right: 5rem;
-}
-
-.daysleft {
-    font-size: .85rem;
-    right: 1rem;
-    bottom: 5rem;
+.time {
+    display: inline-flex;
+    margin-left: 5rem;
 }
 
 .line {
     border-top: 1px solid white;
+    margin-left: 1rem;
+    margin-right: 1rem;
+    margin-top: 1rem;
+}
+
+.footer {
+    display: inline-flex;
+    margin-top: 1rem;
+    margin-left: 1rem;
 }
 
 .avatar {
-    width: 1.5rem;
-    border-radius: 50%;
+    width: 2rem;
     border: 1px solid white;
-    bottom: 1.5rem;
-    left: 1rem;
+    border-radius: 50%;
+    margin-right: .85rem;
 }
 
-.name {
-    bottom: 1.8rem;
-    left: 3.5rem;
+.footer p {
+    line-height: 1.9;
 }
